--- a/sass_template/assets/sass/style.scss
+++ b/sass_template/assets/sass/style.scss
@@ -8,6 +8,23 @@
    More on COMPASS: http://compass-style.org/install/
    ************************************************************************** */
 
+
+// ==========================================================================
+//   IMPORTING HELPERS
+   
+//   These files are needed at the beginning so that we establish all
+//   our mixins, variables, and typography that we'll be using 
+//   across the whole project.
+// ========================================================================== */
+
+@import "compass";
+
+// import compass layout helper
+@import "compass/layout.scss";
+
+// import compass css3 helper
+@import "compass/css3";
+
 /* ==========================================================================
    IMPORTING PARTIALS
    
