Update some mixins, switch to Compass mixins

--- a/sass_template/sass/breakpoints/_1024down.scss
+++ b/sass_template/sass/breakpoints/_1024down.scss
@@ -1,4 +1,4 @@
-// ******** Tablet Stylesheet (iPads - portrait and landscape) ******** */
+// ******** Tablet Stylesheet (iPads - portrait and landscape) ******** //
 // Author: Habit
 
 /* General Styles - Tablet
