--- a/sass_template/sass/breakpoints/_1024down2x.scss
+++ b/sass_template/sass/breakpoints/_1024down2x.scss
@@ -1,4 +1,4 @@
-// ******** Retina Tablet Stylesheet (iPads - portrait and landscape) ******** */
+// ******** Retina Tablet Stylesheet (iPads - portrait and landscape) ******** //
 // Author: Habit
 
 /* General Styles - Tablet only Retina
