--- a/sass_template/sass/breakpoints/_480down.scss
+++ b/sass_template/sass/breakpoints/_480down.scss
@@ -1,4 +1,4 @@
-// ******** Mobile Stylesheet (Smartphones - portrait and landscape) ******** */
+// ******** Mobile Stylesheet (Smartphones - portrait and landscape) ******** //
 // Author: Habit
 
 /* General Styles - Mobile
