--- a/sass_template/sass/breakpoints/_480down2x.scss
+++ b/sass_template/sass/breakpoints/_480down2x.scss
@@ -1,4 +1,4 @@
-// ******** Retina Mobile Stylesheet (Smartphones - portrait and landscape) ******** */
+// ******** Retina Mobile Stylesheet (Smartphones - portrait and landscape) ******** //
 // Author: Habit
 
 /* General Styles - Mobile only Retina
