--- a/sass_template/sass/partials/_normalize.scss
+++ b/sass_template/sass/partials/_normalize.scss
@@ -1,4 +1,4 @@
-// ******** Stylesheet: Normalize ******** */
+// ******** Stylesheet: Normalize ******** //
 
 // Author: Habit
 // Replace with your own normalize styles if preferred.
