--- a/sass_template/sass/partials/_typography.scss
+++ b/sass_template/sass/partials/_typography.scss
@@ -1,4 +1,4 @@
-// ******** Stylesheet: Typography ******** */
+// ******** Stylesheet: Typography ******** //
 
 // Author: Habit
 
@@ -12,8 +12,8 @@
 
 
 // ==========================================================================
-//   Base font fallbacks
-// ========================================================================== */
+//  Base font fallbacks
+// ==========================================================================
 $sans-serif:           'Helvetica Neue', Helvetica, Arial, sans-serif;
 $serif:                'Georgia', Cambria, Times New Roman, Times, serif;
 
@@ -30,8 +30,8 @@ $serif:                'Georgia', Cambria, Times New Roman, Times, serif;
 
 
 // ==========================================================================
-//   Custom Fonts
-// ========================================================================== */
+//  Custom Fonts
+// ==========================================================================
 $font-gothic-book:     'AlternateGothicW01-No2 691799', $sans-serif;
 
 $font-officiana-book:  'OfficinaSansITCW01-Book 734509', $sans-serif;
