--- a/sass_template/sass/breakpoints/_2x.scss
+++ b/sass_template/sass/breakpoints/_2x.scss
@@ -1,4 +1,4 @@
-// ******** Stylesheet: All device retina styles ******** */
+// ******** Stylesheet: All device retina styles ******** //
 // Author: Habit
 
 /* General Styles - Retina
