--- a/sass_template/sass/partials/_variables.scss
+++ b/sass_template/sass/partials/_variables.scss
@@ -1,4 +1,4 @@
-// ******** Stylesheet: Variables ******** */
+// ******** Stylesheet: Variables ******** //
 
 // Author: Habit
 // Resuable style variables.
@@ -12,8 +12,8 @@
 
 
 // ==========================================================================
-//   Colors
-// ========================================================================== */
+//  Colors
+// ==========================================================================
 $color-alert-yellow: #ebe16f;
 $color-alert-red:    #fbe3e4;
 $color-alert-green:  #e6efc2;
@@ -33,8 +33,5 @@ $color-link-hover:  darken($color-link, 20%);
 
 
 // ==========================================================================
-//   Structure
-// ========================================================================== */
-
-$height-footer: 50px;
-$height-footer-negative: -50px;
+//  Structure
+// ==========================================================================
